TestCloneBenchMethodHistogram green